2019-1/220/users/2882/executions/1736_2498.log
== TEST (2019-05-16 16:03:06) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=int(input("Percentual de crescimento de A: "))
pb=int(input("Percentual de crescimento de B: "))
pa1=((pa/100)*a)+a
pb1=((pb/100)*b)+b

i=0
ca=0
cb=0

while(a<b):
	ca=ca+pa1
	cb=cb+pb1
	i=i+1
	print(int(i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pa=int(input())
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:03:39) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
pa1=((pa/100)*a)+a
pb1=((pb/100)*b)+b

i=0
ca=0
cb=0

while(a<b):
	ca=ca+pa1
	cb=cb+pb1
	i=i+1
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:06:00) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
pa1=((pa/100)*a)+a
pb1=((pb/100)*b)+b

i=0
ca=0
cb=0

while(a<b):
	ca=ca+pa1
	cb=cb+pb1
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:09:24) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
pa1=((pa/100)*a)+a
pb1=((pb/100)*b)+b

i=0
ca=0
cb=0

while(a<b):
	ca=ca+pa1
	cb=cb+pb1
	i=i+1
	
print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:09:51) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
pa1=((pa/100)*a)+a
pb1=((pb/100)*b)+b

i=0
ca=0
cb=0

while(a<b):
	ca=ca+pa1
	cb=cb+pb1
	i=i+1
	
print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:40) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(a<b):
	ca=ca+(pa/100*a)
	cb=cb+(pb/100*b)
	i=i+1
	
print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:57) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(a<b):
	ca=ca+(pa/100*a)
	cb=cb+(pb/100*b)
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:14:58) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(ca<cb):
	ca=ca+(pa/100*a)
	cb=cb+(pb/100*b)
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:35) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(ca<cb):
	ca=ca+(pa/100*ca)
	cb=cb+(pb/100*cb)
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:39) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(ca<cb):
	ca=ca+(pa/100*ca)
	cb=cb+(pb/100*cb)
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:44) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(ca<cb):
	ca=ca+(pa/100*ca)
	cb=cb+(pb/100*cb)
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:58) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(ca<cb):
	ca=ca+(pa/100*ca)
	cb=cb+(pb/100*cb)
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:20:46) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(ca<cb):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:20:52) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(ca<cb):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:37) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(ca<cb):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:22:58) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(ca<cb):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:39) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:40) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:40) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:45) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:56) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:32:59) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- EXECUTION TIME:
0.0249689
-- ERROR:
Error response from daemon: Container f0b15f950104b26e2f812dbccd9fe01b445fe09e55a122829d07b7b3af186ca6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:01) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:03) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*ca
	ca=ca+renda
	rendb=(pb/100)*cb
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- EXECUTION TIME:
0.029825
-- ERROR:
Error response from daemon: Container f0b15f950104b26e2f812dbccd9fe01b445fe09e55a122829d07b7b3af186ca6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:17) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:18) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:19) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:19) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- EXECUTION TIME:
0.031225
-- ERROR:
Error response from daemon: Container f0b15f950104b26e2f812dbccd9fe01b445fe09e55a122829d07b7b3af186ca6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:20) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- EXECUTION TIME:
0.039397
-- ERROR:
Error response from daemon: Container f0b15f950104b26e2f812dbccd9fe01b445fe09e55a122829d07b7b3af186ca6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:21) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- EXECUTION TIME:
0.0263631
-- ERROR:
Error response from daemon: Container f0b15f950104b26e2f812dbccd9fe01b445fe09e55a122829d07b7b3af186ca6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:22) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- EXECUTION TIME:
0.0415759
-- ERROR:
Error response from daemon: Container f0b15f950104b26e2f812dbccd9fe01b445fe09e55a122829d07b7b3af186ca6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:22) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- EXECUTION TIME:
0.0404301
-- ERROR:
Error response from daemon: Container f0b15f950104b26e2f812dbccd9fe01b445fe09e55a122829d07b7b3af186ca6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:34) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- EXECUTION TIME:
0.028121
-- ERROR:
Error response from daemon: Container f0b15f950104b26e2f812dbccd9fe01b445fe09e55a122829d07b7b3af186ca6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:35) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b

while(b>a):
	renda=(pa/100)*a
	ca=ca+renda
	rendb=(pb/100)*b
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:18:30) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b
renda=(pa/100)*a
rendb=(pb/100)*b

while(b>a):
	ca=ca+renda
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:19:43) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b
renda=(pa/100)*a
rendb=(pb/100)*b

while(cb>ca):
	ca=ca+renda
	cb=cb+rendb
	i=i+1
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:06) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b
renda=(pa/100)*a
rendb=(pb/100)*b

while(cb>ca):
	ca=ca+renda
	cb=cb+rendb
	i=i+1
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:29) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b
renda=(pa/100)*a
rendb=(pb/100)*b

while(cb>ca):
	ca=ca+renda
	cb=cb+rendb
	i=i+1

print(int(i))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:40) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b
renda=(pa/100)*a
rendb=(pb/100)*b

while(cb>ca):
	ca=ca+renda
	cb=cb+rendb
	i=i+1

print(int(i))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:25) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b
renda=(pa/100)*a
rendb=(pb/100)*b

while(b>c):
	ca=ca+renda
	cb=cb+rendb
	
	i=i+1

print(int(i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(b>c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:47) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b
renda=(pa/100)*a
rendb=(pb/100)*b

while(b>a):
	ca=ca+renda
	cb=cb+rendb
	
	i=i+1

print(int(i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(b>c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:05) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=a
cb=b
renda=(pa/100)*a
rendb=(pb/100)*b

while(b>a):
	ca=ca+renda
	cb=cb+rendb
	
	i=i+1

	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:22) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=0
cb=1
renda=(pa/100)*a
rendb=(pb/100)*b

while(b>a):
	ca=ca+renda
	cb=cb+rendb
	i=i+1

	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:23) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=0
cb=1
renda=(pa/100)*a
rendb=(pb/100)*b

while(b>a):
	ca=ca+renda
	cb=cb+rendb
	i=i+1
	
if(i>0):
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:39) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=0
cb=1
renda=(pa/100)*a
rendb=(pb/100)*b

while(b>a):
	ca=ca+renda
	cb=cb+rendb
	i=i+1
	
	if(i>0):
		print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:39) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
#pa1=((pa/100)*a)+a
#pb1=((pb/100)*b)+b

i=0
ca=0
cb=1
renda=(pa/100)*a
rendb=(pb/100)*b

while(a<b):
	i=i+1
	ca=ca+renda
	cb=cb+rendb
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:06) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))

i=0
a=0
b=1
renda=(pa/100)*a
rendb=(pb/100)*b

while(a<b):
	i=i+1
	a=a+renda
	b=b+rendb
	
	print(int(i))
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:40) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
pa1=pa/100
pb1=pb/100
i=0
while(a<b):
	i=i+1
	a=a+(a*pa1)
	b=b+(b*pb1)
	if(a>=b):
		print(i)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:51:40) 
-- CODE:
a=int(input("Numero de habitantes de A: "))
b=int(input("Numero de habitantes de B: "))
pa=float(input("Percentual de crescimento de A: "))
pb=float(input("Percentual de crescimento de B: "))
pa1=pa/100
pb1=pb/100
i=0
while(a<b):
	i=i+1
	a=a+(a*pa1)
	b=b+(b*pb1)
	if(a>=b):
		print(i)
-- EXECUTION TIME:
0.150381
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
